--- a/.env.example
+++ b/.env.example
@@ -1,9 +1,9 @@
 APP_NAME=Laravel
-APP_ENV=local
+APP_ENV=production
 APP_KEY=
-APP_DEBUG=true
+APP_DEBUG=false
 APP_TIMEZONE=UTC
-APP_URL=http://localhost
+APP_URL=https://laravel-qa40.onrender.com
 
 APP_LOCALE=en
 APP_FALLBACK_LOCALE=en
@@ -19,12 +19,12 @@ LOG_STACK=single
 LOG_DEPRECATIONS_CHANNEL=null
 LOG_LEVEL=debug
 
-DB_CONNECTION=sqlite
-# DB_HOST=127.0.0.1
-# DB_PORT=3306
-# DB_DATABASE=laravel
-# DB_USERNAME=root
-# DB_PASSWORD=
+DB_CONNECTION=pgsql
+DB_HOST=dpg-cq047tmehbks73e6gk0g-a
+DB_PORT=5432
+DB_DATABASE=pixel_1bhb
+DB_USERNAME=habtetsega
+DB_PASSWORD=h9x7Zoxw3PQf9DMRCti7X0l5hk0lFbNk
 
 SESSION_DRIVER=database
 SESSION_LIFETIME=120
