--- a/compose.yaml
+++ b/compose.yaml
@@ -13,6 +13,8 @@ services:
       context: .
     ports:
       - 8092:80
+    volumes:
+      - .:/var/www/html
 
 # The commented out section below is an example of how to define a PostgreSQL
 # database that your application can use. `depends_on` tells Docker Compose to
